# OpenYXDB

./: CMakeLists.txt  README.md
include/: FieldType.h  Open_AlteryxYXDB.h  SRC_stringHelper.h  SrcLib_Replacement.h  UnicodeCompareNoCase.h  lzf.h  lzfP.h  sqlite3.h  stdafx.h
include/AyxData/dc/sdk/: GenericEngineBase.h
include/Base/: Base_ImpExp.h  DateTimeValidate.h  GlotKernel.h  Hash128.h  LzfWrapper.h  MiniXmlParser.h  Portability_Linux.h  SCType.h  SRC_doubleToStringHelper.h  StringToDouble.h  String_ImpExp.h  TBlobVal.h  TFieldVal.h  U16unit.h  Unicode.h  UnicodeCaseFoldingIterator.h  UnicodeCaseFoldingTable.h  lzf_src.h
include/Base/EncodingTraits/: UTF16Traits.h
include/RecordLib/: FieldBase.h  FieldBlob.h  FieldBool.h  FieldDateTime.h  FieldFixedDecimal.h  FieldFloat.h  FieldNum.h  FieldSchema.h  FieldString.h  FieldTypes.h  Record.h  RecordCopier.h  RecordData.h  RecordInfo.h  RecordLibExport.h
include/RecordLib/test/: RecordCreator.h  RecordLibTestUtils.h
src/: FieldBase.cpp  FieldBlob.cpp  FieldBool.cpp  FieldDateTime.cpp  FieldFixedDecimal.cpp  FieldSchema.cpp  FieldType.cpp  GlotKernel.cpp  Hash128.cpp  LzfWrapper.cpp  MiniXmlParser.cpp  Open_AlteryxYXDB.cpp  Record.cpp  RecordCopier.cpp  RecordInfo.cpp  SCType.cpp  SRC_stringHelper_OpenAlteryx.cpp  StringToDouble.cpp  UTF16Traits.cpp  UnicodeCaseFoldingTable.cpp  UnicodeCompareNoCase.cpp
test/: main.cpp
